--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "bikram-sambat-js": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +47,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
+    "sharethis-reactjs": "^1.6.0",
     "sonner": "^2.0.4",
     "svix": "^1.65.0",
     "tailwind-merge": "^3.2.0",
