--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bikram-sambat-js": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
@@ -54,6 +55,7 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
