--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
+    "@vercel/analytics": "^1.5.0",
     "bikram-sambat-js": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
