--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
@@ -33,22 +35,30 @@
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-bullet-list": "^2.14.0",
+    "@tiptap/extension-code-block-lowlight": "^2.23.1",
+    "@tiptap/extension-color": "^2.23.1",
     "@tiptap/extension-heading": "^2.14.0",
-    "@tiptap/extension-image": "^2.14.0",
-    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-highlight": "^2.23.1",
+    "@tiptap/extension-image": "^2.23.1",
+    "@tiptap/extension-link": "^2.23.1",
     "@tiptap/extension-list-item": "^2.14.0",
     "@tiptap/extension-ordered-list": "^2.14.0",
-    "@tiptap/extension-placeholder": "^2.14.0",
-    "@tiptap/extension-text-align": "^2.14.0",
-    "@tiptap/extension-underline": "^2.14.0",
-    "@tiptap/pm": "^2.14.0",
-    "@tiptap/react": "^2.14.0",
-    "@tiptap/starter-kit": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.23.1",
+    "@tiptap/extension-text-align": "^2.23.1",
+    "@tiptap/extension-text-style": "^2.23.1",
+    "@tiptap/extension-underline": "^2.23.1",
+    "@tiptap/extension-youtube": "^2.23.1",
+    "@tiptap/pm": "^2.23.1",
+    "@tiptap/react": "^2.23.1",
+    "@tiptap/starter-kit": "^2.23.1",
+    "@types/react-time-picker": "^4.0.3",
     "@vercel/analytics": "^1.5.0",
     "bikram-sambat-js": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html-react-parser": "^5.2.5",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.507.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
@@ -56,15 +66,18 @@
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-audio-player": "^0.17.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.15.3",
     "sharethis-reactjs": "^1.6.0",
     "sonner": "^2.0.4",
     "svix": "^1.65.0",
     "tailwind-merge": "^3.2.0",
+    "unicode": "^14.0.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.42",
